# TheGreatGuessingGame

./: .gitignore  README.md  Rakefile
DialogSystem/: .classpath  Manifest.txt  display_client.py
DialogSystem/src/de/roboy/dialog/: DialogSystem.java
DialogSystem/src/de/roboy/dialog/action/: EmotionAction.java  MovementAction.java
DialogSystem/src/de/roboy/dialog/personality/: GuessingGamePersonality.java
DialogSystem/src/de/roboy/guessinggame/: Association.java
DialogSystem/src/de/roboy/io/: ClassificationInput.java  CommandLineOutput.java  Input.java  OutputDevice.java  SentenceInput.java
DialogSystem/src/de/roboy/util/: GsonHelper.java
guessing_game_new/: CMakeLists.txt  package.xml
guessing_game_new/include/: control_node.hpp  vision_node.hpp
guessing_game_new/scripts/: guessing_game.py  guessing_games.py  main.py  roboy.py  speech.py  vision.py
guessing_game_new/scripts/functions/: listen_to_speech.py  predict_label.py  segment_and_extract.py
guessing_game_new/src/: clustering.cpp  control_node.cpp  main_node.cpp  vision_node.cpp  visualize.cpp
guessing_game_new/srv/: image_request.srv
ratings/: 100th.txt  10th.txt  11th.txt  12th.txt  13th.txt  14th.txt  15th.txt  16th.txt  17th.txt  18th.txt  19th.txt  1st.txt  20th.txt  23rd.txt  24th.txt  25th.txt  26th.txt  27th.txt  28th.txt  29th.txt  2d.txt  2nd.txt  30th.txt  3d.txt  3rd.txt  40th.txt  4th.txt  50th.txt  5th.txt  60th.txt  6th.txt  7th.txt  8th.txt  8vo.txt  9th.txt  Aa.txt  Aaa.txt  Aaron.txt  Aba.txt  Abate.txt  (+17110 more)
src/: display_server.py  parse_word.py
src/roboy/: guessing_game.py  roboy.py
test/: environment.py  introduction.feature
test/steps/: roboy.py
test/support/: roboy.py
